fixed logo on mobilew menu

--- a/src/app/components/header/Header.module.css
+++ b/src/app/components/header/Header.module.css
@@ -278,6 +278,13 @@
     display: none;
   }
 
+  .logoBG {
+    width: 700px;
+    height: 700px;
+    top: 40px;
+    display: block;
+  }
+
   .logoWhite {
     display: block;
     width: 100%;
